# ASI_ML

./: .gitignore  README.md  analysis.ipynb  analysis.py  evaluation.ipynb  evaluation.py  main.py  package-lock.json  pyproject.toml  regression.ipynb  requirements.txt  training.ipynb  training.py
.viz/: stats.json
conf/: logging.yml
conf/base/: catalog.yml  credentials.yml  parameters.yml
conf/local/: credentials.yml
data/08_reporting/: model_metrics.csv
src/ASI_ML/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/ASI_ML.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ASI_ML/pipelines/data_science/: api_run.py  evaluate_models.py  export_parameters.py  nodes.py  perform_analysis.py  pipeline.py  split_data.py  streamlit.py  streamlit_run.py  train_models.py  trainer.py
